// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultTokens should match snapshot 1`] = `
Object {
  "backgroundAlertCritical": "#fae8e8",
  "backgroundAlertInfo": "#e0f6ff",
  "backgroundAlertSuccess": "#e7f3e8",
  "backgroundAlertWarning": "#fcf1cd",
  "backgroundBadgeCritical": "#fae8e8",
  "backgroundBadgeDark": "#46515e",
  "backgroundBadgeInfo": "#e0f6ff",
  "backgroundBadgeNeutral": "#f5f7f9",
  "backgroundBadgeSuccess": "#e7f3e8",
  "backgroundBadgeWarning": "#fcf1cd",
  "backgroundBody": "#f5f7f9",
  "backgroundButtonBordered": "transparent",
  "backgroundButtonBorderedActive": "#fff",
  "backgroundButtonBorderedHover": "#f5f7f9",
  "backgroundButtonCritical": "#d21c1c",
  "backgroundButtonCriticalActive": "#b21717",
  "backgroundButtonCriticalHover": "#bd1919",
  "backgroundButtonFacebook": "#3b5998",
  "backgroundButtonFacebookActive": "#354f88",
  "backgroundButtonFacebookHover": "#385490",
  "backgroundButtonGoogle": "#f5f7f9",
  "backgroundButtonGoogleActive": "#d6dee6",
  "backgroundButtonGoogleHover": "#e5eaef",
  "backgroundButtonInfo": "#0176D2",
  "backgroundButtonInfoActive": "#0064b2",
  "backgroundButtonInfoHover": "#006abd",
  "backgroundButtonLinkPrimary": "transparent",
  "backgroundButtonLinkPrimaryActive": "#d6dee6",
  "backgroundButtonLinkPrimaryHover": "#e5eaef",
  "backgroundButtonLinkSecondary": "transparent",
  "backgroundButtonLinkSecondaryActive": "#d6dee6",
  "backgroundButtonLinkSecondaryHover": "#e5eaef",
  "backgroundButtonPrimary": "#00a991",
  "backgroundButtonPrimaryActive": "#008f7b",
  "backgroundButtonPrimaryHover": "#009882",
  "backgroundButtonSecondary": "#e8edf1",
  "backgroundButtonSecondaryActive": "#cad5df",
  "backgroundButtonSecondaryHover": "#d9e1e8",
  "backgroundButtonSuccess": "#46B655",
  "backgroundButtonSuccessActive": "#3fa34c",
  "backgroundButtonSuccessHover": "#42ac50",
  "backgroundButtonWarning": "#f9971e",
  "backgroundButtonWarningActive": "#e68206",
  "backgroundButtonWarningHover": "#f48a06",
  "backgroundCard": "#fff",
  "backgroundCarrierLogo": "transparent",
  "backgroundCountryFlag": "transparent",
  "backgroundIllustration": "transparent",
  "backgroundInput": "#fff",
  "backgroundInputDisabled": "#e8edf1",
  "backgroundModal": "#fff",
  "backgroundSeparator": "#e8edf1",
  "backgroundServiceLogo": "transparent",
  "borderColorButtonCriticalBordered": "#d21c1c",
  "borderColorButtonCriticalBorderedActive": "#b21717",
  "borderColorButtonCriticalBorderedHover": "#bd1919",
  "borderColorButtonFacebookBordered": "#3b5998",
  "borderColorButtonFacebookBorderedActive": "#354f88",
  "borderColorButtonFacebookBorderedHover": "#385490",
  "borderColorButtonGoogleBordered": "#46515e",
  "borderColorButtonGoogleBorderedActive": "#38404b",
  "borderColorButtonGoogleBorderedHover": "#3f4854",
  "borderColorButtonInfoBordered": "#0176D2",
  "borderColorButtonInfoBorderedActive": "#0064b2",
  "borderColorButtonInfoBorderedHover": "#006abd",
  "borderColorButtonPrimaryBordered": "#00a991",
  "borderColorButtonPrimaryBorderedActive": "#008f7b",
  "borderColorButtonPrimaryBorderedHover": "#009882",
  "borderColorButtonSecondaryBordered": "#46515e",
  "borderColorButtonSecondaryBorderedActive": "#38404b",
  "borderColorButtonSecondaryBorderedHover": "#3f4854",
  "borderColorButtonSuccessBordered": "#46B655",
  "borderColorButtonSuccessBorderedActive": "#3fa34c",
  "borderColorButtonSuccessBorderedHover": "#42ac50",
  "borderColorButtonWarningBordered": "#f9971e",
  "borderColorButtonWarningBorderedActive": "#e68206",
  "borderColorButtonWarningBorderedHover": "#f48a06",
  "borderColorCard": "#e8edf1",
  "borderColorCheckboxRadio": "#bac7d5",
  "borderColorCheckboxRadioActive": "#46515e",
  "borderColorCheckboxRadioError": "#d21c1c",
  "borderColorCheckboxRadioFocus": "#0176D2",
  "borderColorCheckboxRadioHover": "#7f91a8",
  "borderColorInput": "#bac7d5",
  "borderColorInputActive": "#94a8be",
  "borderColorInputError": "#d21c1c",
  "borderColorInputErrorFocus": "#d21c1c",
  "borderColorInputErrorHover": "#bd1919",
  "borderColorInputFocus": "#0176D2",
  "borderColorInputHover": "#a6b6c8",
  "borderColorModal": "#e8edf1",
  "borderColorTableCell": "#bac7d5",
  "borderRadiusBadge": "12px",
  "borderRadiusCircle": "50%",
  "borderRadiusLarge": "6px",
  "borderRadiusNormal": "3px",
  "borderRadiusSmall": "2px",
  "borderStyleCard": "solid",
  "borderStyleInput": "solid",
  "borderWidthCard": "1px",
  "borderWidthInput": "1px",
  "borderWidthInputFocus": "2px",
  "boxShadowActionable": "0 2px 4px 0 rgba(23, 27, 30, 0.1)",
  "boxShadowButtonFocus": "0 0 4px 1px rgba(1, 118, 210, 0.3)",
  "boxShadowElevatedLevel1": "0 4px 12px 0 rgba(23, 27, 30, 0.15)",
  "boxShadowModal": "0 20px 60px 0 rgba(23, 27, 30, 0.4)",
  "colorAlertIconCritical": "#d21c1c",
  "colorAlertIconInfo": "#0176D2",
  "colorAlertIconSuccess": "#46B655",
  "colorAlertIconWarning": "#f9971e",
  "colorFormLabel": "#46515e",
  "colorFormLabelFilled": "#7f91a8",
  "colorHeading": "#171b1e",
  "colorHeadingInverted": "#fff",
  "colorIconAttention": "#171b1e",
  "colorIconCheckboxRadio": "#00a991",
  "colorIconCheckboxRadioDisabled": "#bac7d5",
  "colorIconCritical": "#d21c1c",
  "colorIconInfo": "#0176D2",
  "colorIconInput": "#bac7d5",
  "colorIconPrimary": "#46515e",
  "colorIconRadioButton": "#00a991",
  "colorIconRadioButtonDisabled": "#bac7d5",
  "colorIconSecondary": "#7f91a8",
  "colorIconSuccess": "#46B655",
  "colorIconTertiary": "#bac7d5",
  "colorIconWarning": "#f9971e",
  "colorInfoCheckBoxRadio": "#7f91a8",
  "colorPlaceholderInput": "#bac7d5",
  "colorPlaceholderInputError": "#d21c1c",
  "colorPlaceholderInputFile": "#7f91a8",
  "colorPlaceholderInputFileError": "#d21c1c",
  "colorTextAlertCritical": "#650808",
  "colorTextAlertInfo": "#003A69",
  "colorTextAlertLink": "#171b1e",
  "colorTextAlertSuccess": "#065d12",
  "colorTextAlertWarning": "#a93610",
  "colorTextAttention": "#171b1e",
  "colorTextBadgeCritical": "#d21c1c",
  "colorTextBadgeDark": "#fff",
  "colorTextBadgeInfo": "#0176D2",
  "colorTextBadgeNeutral": "#171b1e",
  "colorTextBadgeSuccess": "#46B655",
  "colorTextBadgeWarning": "#f9971e",
  "colorTextButtonCritical": "#fff",
  "colorTextButtonCriticalActive": "#fff",
  "colorTextButtonCriticalBordered": "#d21c1c",
  "colorTextButtonCriticalBorderedActive": "#b21717",
  "colorTextButtonCriticalBorderedHover": "#bd1919",
  "colorTextButtonCriticalHover": "#fff",
  "colorTextButtonFacebook": "#fff",
  "colorTextButtonFacebookActive": "#fff",
  "colorTextButtonFacebookBordered": "#3b5998",
  "colorTextButtonFacebookBorderedActive": "#354f88",
  "colorTextButtonFacebookBorderedHover": "#385490",
  "colorTextButtonFacebookHover": "#fff",
  "colorTextButtonFilled": "#fff",
  "colorTextButtonFilledActive": "#fff",
  "colorTextButtonFilledHover": "#fff",
  "colorTextButtonGoogle": "#46515e",
  "colorTextButtonGoogleActive": "#38404b",
  "colorTextButtonGoogleBordered": "#46515e",
  "colorTextButtonGoogleBorderedActive": "#38404b",
  "colorTextButtonGoogleBorderedHover": "#3f4854",
  "colorTextButtonGoogleHover": "#3f4854",
  "colorTextButtonInfo": "#fff",
  "colorTextButtonInfoActive": "#fff",
  "colorTextButtonInfoBordered": "#0176D2",
  "colorTextButtonInfoBorderedActive": "#0064b2",
  "colorTextButtonInfoBorderedHover": "#006abd",
  "colorTextButtonInfoHover": "#fff",
  "colorTextButtonLinkPrimary": "#00a991",
  "colorTextButtonLinkPrimaryActive": "#008f7b",
  "colorTextButtonLinkPrimaryHover": "#009882",
  "colorTextButtonLinkSecondary": "#46515e",
  "colorTextButtonLinkSecondaryActive": "#38404b",
  "colorTextButtonLinkSecondaryHover": "#3f4854",
  "colorTextButtonPrimary": "#fff",
  "colorTextButtonPrimaryActive": "#fff",
  "colorTextButtonPrimaryBordered": "#00a991",
  "colorTextButtonPrimaryBorderedActive": "#008f7b",
  "colorTextButtonPrimaryBorderedHover": "#009882",
  "colorTextButtonPrimaryHover": "#fff",
  "colorTextButtonSecondary": "#46515e",
  "colorTextButtonSecondaryActive": "#38404b",
  "colorTextButtonSecondaryBordered": "#46515e",
  "colorTextButtonSecondaryBorderedActive": "#38404b",
  "colorTextButtonSecondaryBorderedHover": "#3f4854",
  "colorTextButtonSecondaryHover": "#3f4854",
  "colorTextButtonSuccess": "#fff",
  "colorTextButtonSuccessActive": "#fff",
  "colorTextButtonSuccessBordered": "#46B655",
  "colorTextButtonSuccessBorderedActive": "#3fa34c",
  "colorTextButtonSuccessBorderedHover": "#42ac50",
  "colorTextButtonSuccessHover": "#fff",
  "colorTextButtonWarning": "#fff",
  "colorTextButtonWarningActive": "#fff",
  "colorTextButtonWarningBordered": "#f9971e",
  "colorTextButtonWarningBorderedActive": "#e68206",
  "colorTextButtonWarningBorderedHover": "#f48a06",
  "colorTextButtonWarningHover": "#fff",
  "colorTextCritical": "#d21c1c",
  "colorTextError": "#d21c1c",
  "colorTextInfo": "#0176D2",
  "colorTextInput": "#46515e",
  "colorTextInputDisabled": "#bac7d5",
  "colorTextInputPrefix": "#7f91a8",
  "colorTextLinkPrimary": "#00a991",
  "colorTextLinkPrimaryHover": "#00a991",
  "colorTextLinkSecondary": "#171b1e",
  "colorTextLinkSecondaryHover": "#00a991",
  "colorTextPrimary": "#46515e",
  "colorTextSecondary": "#7f91a8",
  "colorTextSuccess": "#46B655",
  "colorTextWarning": "#f9971e",
  "colorTextWhite": "#fff",
  "durationFast": "0.15s",
  "durationNormal": "0.3s",
  "durationSlow": "0.4s",
  "fontFamily": "\\"Roboto\\", -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif",
  "fontSizeButtonLarge": "16px",
  "fontSizeButtonNormal": "14px",
  "fontSizeButtonSmall": "12px",
  "fontSizeFormFeedback": "12px",
  "fontSizeFormLabel": "14px",
  "fontSizeHeadingDisplay": "40px",
  "fontSizeHeadingTitle1": "28px",
  "fontSizeHeadingTitle2": "22px",
  "fontSizeHeadingTitle3": "16px",
  "fontSizeInputNormal": "14px",
  "fontSizeInputSmall": "14px",
  "fontSizeMessage": "14px",
  "fontSizeTextLarge": "16px",
  "fontSizeTextNormal": "14px",
  "fontSizeTextSmall": "12px",
  "fontWeightBold": "700",
  "fontWeightHeadingDisplay": "700",
  "fontWeightHeadingTitle1": "700",
  "fontWeightHeadingTitle2": "500",
  "fontWeightHeadingTitle3": "500",
  "fontWeightLinks": "500",
  "fontWeightMedium": "500",
  "fontWeightNormal": "400",
  "heightBadge": "24px",
  "heightButtonLarge": "52px",
  "heightButtonNormal": "44px",
  "heightButtonSmall": "32px",
  "heightCheckbox": "20px",
  "heightCountryFlag": "auto",
  "heightIconLarge": "32px",
  "heightIconMedium": "24px",
  "heightIconSmall": "16px",
  "heightIllustrationMedium": "200px",
  "heightIllustrationSmall": "90px",
  "heightInputGroupSeparatorNormal": "24px",
  "heightInputGroupSeparatorSmall": "16px",
  "heightInputLarge": "52px",
  "heightInputNormal": "44px",
  "heightInputSmall": "32px",
  "heightRadioButton": "20px",
  "heightSeparator": "1px",
  "heightServiceLogoLarge": "48px",
  "heightServiceLogoMedium": "24px",
  "heightServiceLogoSmall": "12px",
  "lineHeightHeading": "1.2",
  "lineHeightText": "1.4",
  "marginBottomSelectSuffix": "2px",
  "marginButtonIconLarge": "12px",
  "marginButtonIconNormal": "8px",
  "marginButtonIconSmall": "8px",
  "marginRightBadgeIcon": "4px",
  "marginRightButtonGroup": "1px",
  "marginTopFormFeedback": "2px",
  "modifierScaleButtonActive": 0.95,
  "modifierScaleCheckboxRadioActive": 0.95,
  "opacityButtonDisabled": "0.3",
  "opacityCheckboxDisabled": "0.5",
  "opacityOverlay": "0.8",
  "opacityRadioButtonDisabled": "0.5",
  "paddingAlert": "16px",
  "paddingAlertWithIcon": "12px",
  "paddingButtonLarge": "28px",
  "paddingButtonLargeWithIcon": "16px",
  "paddingButtonNormal": "16px",
  "paddingButtonNormalWithIcon": "12px",
  "paddingButtonSmall": "12px",
  "paddingButtonSmallWithIcon": "8px",
  "paddingInputNormal": "0 12px",
  "paddingInputSmall": "0 12px",
  "paddingLeftInputFile": "6px",
  "paddingLeftSelectPrefix": "48px",
  "paddingTextareaNormal": "12px",
  "paddingTextareaSmall": "8px 12px",
  "paletteBlueDark": "#003A69",
  "paletteBlueLight": "#e0f6ff",
  "paletteBlueLightActive": "#b0e8fe",
  "paletteBlueLightHover": "#c8effe",
  "paletteBlueNormal": "#0176D2",
  "paletteBlueNormalActive": "#0064b2",
  "paletteBlueNormalHover": "#006abd",
  "paletteCloudLight": "#f5f7f9",
  "paletteCloudLightActive": "#d6dee6",
  "paletteCloudLightHover": "#e5eaef",
  "paletteCloudNormal": "#e8edf1",
  "paletteCloudNormalActive": "#cad5df",
  "paletteCloudNormalHover": "#d9e1e8",
  "paletteGreenDark": "#065d12",
  "paletteGreenLight": "#e7f3e8",
  "paletteGreenLightActive": "#c7e3c9",
  "paletteGreenLightHover": "#d7ebd8",
  "paletteGreenNormal": "#46B655",
  "paletteGreenNormalActive": "#3fa34c",
  "paletteGreenNormalHover": "#42ac50",
  "paletteInkDark": "#171b1e",
  "paletteInkLight": "#7f91a8",
  "paletteInkLightActive": "#5f738c",
  "paletteInkLightHover": "#6d819c",
  "paletteInkLighter": "#bac7d5",
  "paletteInkLighterActive": "#94a8be",
  "paletteInkLighterHover": "#a6b6c8",
  "paletteInkNormal": "#46515e",
  "paletteInkNormalActive": "#38404b",
  "paletteInkNormalHover": "#3f4854",
  "paletteOrangeDark": "#a93610",
  "paletteOrangeLight": "#fcf1cd",
  "paletteOrangeLightActive": "#f9e4a1",
  "paletteOrangeLightHover": "#faeab7",
  "paletteOrangeNormal": "#f9971e",
  "paletteOrangeNormalActive": "#e68206",
  "paletteOrangeNormalHover": "#f48a06",
  "paletteProductDark": "#00826f",
  "paletteProductLight": "#E1F5F2",
  "paletteProductLightActive": "#9addd3",
  "paletteProductLightHover": "#bde9e2",
  "paletteProductNormal": "#00a991",
  "paletteProductNormalActive": "#008f7b",
  "paletteProductNormalHover": "#009882",
  "paletteRedDark": "#650808",
  "paletteRedLight": "#fae8e8",
  "paletteRedLightActive": "#f1c0c0",
  "paletteRedLightHover": "#f5d4d4",
  "paletteRedNormal": "#d21c1c",
  "paletteRedNormalActive": "#b21717",
  "paletteRedNormalHover": "#bd1919",
  "paletteSocialFacebook": "#3b5998",
  "paletteSocialFacebookActive": "#354f88",
  "paletteSocialFacebookHover": "#385490",
  "paletteWhite": "#fff",
  "paletteWhiteActive": "#e5eaef",
  "paletteWhiteHover": "#f5f7f9",
  "spaceLarge": "24px",
  "spaceMedium": "16px",
  "spaceSmall": "12px",
  "spaceXLarge": "32px",
  "spaceXSmall": "8px",
  "spaceXXLarge": "40px",
  "spaceXXSmall": "4px",
  "spaceXXXLarge": "52px",
  "spaceXXXSmall": "2px",
  "textDecorationTextLinkPrimary": "none",
  "textDecorationTextLinkPrimaryHover": "underline",
  "textDecorationTextLinkSecondary": "underline",
  "textDecorationTextLinkSecondaryHover": "underline",
  "widthBadgeCircled": "24px",
  "widthCheckbox": "20px",
  "widthCountryFlag": "24px",
  "widthIconLarge": "32px",
  "widthIconMedium": "24px",
  "widthIconSmall": "16px",
  "widthRadioButton": "20px",
  "zIndexDefault": "1",
  "zIndexModal": "825",
  "zIndexModalOverlay": "800",
  "zIndexOnTheTop": "900",
  "zIndexSticky": "100",
}
`;

exports[`fromPlainObject should create full theme should match snapshot 1`] = `
Object {
  "backgroundAlertCritical": "#fae8e8",
  "backgroundAlertInfo": "#e0f6ff",
  "backgroundAlertSuccess": "#e7f3e8",
  "backgroundAlertWarning": "#fcf1cd",
  "backgroundBadgeCritical": "#fae8e8",
  "backgroundBadgeDark": "#46515e",
  "backgroundBadgeInfo": "#e0f6ff",
  "backgroundBadgeNeutral": "#f5f7f9",
  "backgroundBadgeSuccess": "#e7f3e8",
  "backgroundBadgeWarning": "#fcf1cd",
  "backgroundBody": "#f5f7f9",
  "backgroundButtonBordered": "transparent",
  "backgroundButtonBorderedActive": "#fff",
  "backgroundButtonBorderedHover": "#f5f7f9",
  "backgroundButtonCritical": "#d21c1c",
  "backgroundButtonCriticalActive": "#b21717",
  "backgroundButtonCriticalHover": "#bd1919",
  "backgroundButtonFacebook": "#3b5998",
  "backgroundButtonFacebookActive": "#354f88",
  "backgroundButtonFacebookHover": "#385490",
  "backgroundButtonGoogle": "#f5f7f9",
  "backgroundButtonGoogleActive": "#d6dee6",
  "backgroundButtonGoogleHover": "#e5eaef",
  "backgroundButtonInfo": "#0176D2",
  "backgroundButtonInfoActive": "#0064b2",
  "backgroundButtonInfoHover": "#006abd",
  "backgroundButtonLinkPrimary": "transparent",
  "backgroundButtonLinkPrimaryActive": "#d6dee6",
  "backgroundButtonLinkPrimaryHover": "#e5eaef",
  "backgroundButtonLinkSecondary": "transparent",
  "backgroundButtonLinkSecondaryActive": "#d6dee6",
  "backgroundButtonLinkSecondaryHover": "#e5eaef",
  "backgroundButtonPrimary": "#ff0000",
  "backgroundButtonPrimaryActive": "#cc0000",
  "backgroundButtonPrimaryHover": "#e50000",
  "backgroundButtonSecondary": "#e8edf1",
  "backgroundButtonSecondaryActive": "#cad5df",
  "backgroundButtonSecondaryHover": "#d9e1e8",
  "backgroundButtonSuccess": "#46B655",
  "backgroundButtonSuccessActive": "#3fa34c",
  "backgroundButtonSuccessHover": "#42ac50",
  "backgroundButtonWarning": "#f9971e",
  "backgroundButtonWarningActive": "#e68206",
  "backgroundButtonWarningHover": "#f48a06",
  "backgroundCard": "#fff",
  "backgroundCarrierLogo": "transparent",
  "backgroundCountryFlag": "transparent",
  "backgroundIllustration": "transparent",
  "backgroundInput": "#fff",
  "backgroundInputDisabled": "#e8edf1",
  "backgroundModal": "#fff",
  "backgroundSeparator": "#e8edf1",
  "backgroundServiceLogo": "transparent",
  "borderColorButtonCriticalBordered": "#d21c1c",
  "borderColorButtonCriticalBorderedActive": "#b21717",
  "borderColorButtonCriticalBorderedHover": "#bd1919",
  "borderColorButtonFacebookBordered": "#3b5998",
  "borderColorButtonFacebookBorderedActive": "#354f88",
  "borderColorButtonFacebookBorderedHover": "#385490",
  "borderColorButtonGoogleBordered": "#46515e",
  "borderColorButtonGoogleBorderedActive": "#38404b",
  "borderColorButtonGoogleBorderedHover": "#3f4854",
  "borderColorButtonInfoBordered": "#0176D2",
  "borderColorButtonInfoBorderedActive": "#0064b2",
  "borderColorButtonInfoBorderedHover": "#006abd",
  "borderColorButtonPrimaryBordered": "#ff0000",
  "borderColorButtonPrimaryBorderedActive": "#cc0000",
  "borderColorButtonPrimaryBorderedHover": "#e50000",
  "borderColorButtonSecondaryBordered": "#46515e",
  "borderColorButtonSecondaryBorderedActive": "#38404b",
  "borderColorButtonSecondaryBorderedHover": "#3f4854",
  "borderColorButtonSuccessBordered": "#46B655",
  "borderColorButtonSuccessBorderedActive": "#3fa34c",
  "borderColorButtonSuccessBorderedHover": "#42ac50",
  "borderColorButtonWarningBordered": "#f9971e",
  "borderColorButtonWarningBorderedActive": "#e68206",
  "borderColorButtonWarningBorderedHover": "#f48a06",
  "borderColorCard": "#e8edf1",
  "borderColorCheckboxRadio": "#bac7d5",
  "borderColorCheckboxRadioActive": "#46515e",
  "borderColorCheckboxRadioError": "#d21c1c",
  "borderColorCheckboxRadioFocus": "#0176D2",
  "borderColorCheckboxRadioHover": "#7f91a8",
  "borderColorInput": "#bac7d5",
  "borderColorInputActive": "#94a8be",
  "borderColorInputError": "#d21c1c",
  "borderColorInputErrorFocus": "#d21c1c",
  "borderColorInputErrorHover": "#bd1919",
  "borderColorInputFocus": "#0176D2",
  "borderColorInputHover": "#a6b6c8",
  "borderColorModal": "#e8edf1",
  "borderColorTableCell": "#bac7d5",
  "borderRadiusBadge": "12px",
  "borderRadiusCircle": "50%",
  "borderRadiusLarge": "6px",
  "borderRadiusNormal": "3px",
  "borderRadiusSmall": "2px",
  "borderStyleCard": "solid",
  "borderStyleInput": "solid",
  "borderWidthCard": "1px",
  "borderWidthInput": "1px",
  "borderWidthInputFocus": "2px",
  "boxShadowActionable": "0 2px 4px 0 rgba(23, 27, 30, 0.1)",
  "boxShadowButtonFocus": "0 0 4px 1px rgba(1, 118, 210, 0.3)",
  "boxShadowElevatedLevel1": "0 4px 12px 0 rgba(23, 27, 30, 0.15)",
  "boxShadowModal": "0 20px 60px 0 rgba(23, 27, 30, 0.4)",
  "colorAlertIconCritical": "#d21c1c",
  "colorAlertIconInfo": "#0176D2",
  "colorAlertIconSuccess": "#46B655",
  "colorAlertIconWarning": "#f9971e",
  "colorFormLabel": "#46515e",
  "colorFormLabelFilled": "#7f91a8",
  "colorHeading": "#171b1e",
  "colorHeadingInverted": "#fff",
  "colorIconAttention": "#171b1e",
  "colorIconCheckboxRadio": "#ff0000",
  "colorIconCheckboxRadioDisabled": "#bac7d5",
  "colorIconCritical": "#d21c1c",
  "colorIconInfo": "#0176D2",
  "colorIconInput": "#bac7d5",
  "colorIconPrimary": "#46515e",
  "colorIconRadioButton": "#ff0000",
  "colorIconRadioButtonDisabled": "#bac7d5",
  "colorIconSecondary": "#7f91a8",
  "colorIconSuccess": "#46B655",
  "colorIconTertiary": "#bac7d5",
  "colorIconWarning": "#f9971e",
  "colorInfoCheckBoxRadio": "#7f91a8",
  "colorPlaceholderInput": "#bac7d5",
  "colorPlaceholderInputError": "#d21c1c",
  "colorPlaceholderInputFile": "#7f91a8",
  "colorPlaceholderInputFileError": "#d21c1c",
  "colorTextAlertCritical": "#650808",
  "colorTextAlertInfo": "#003A69",
  "colorTextAlertLink": "#171b1e",
  "colorTextAlertSuccess": "#065d12",
  "colorTextAlertWarning": "#a93610",
  "colorTextAttention": "#171b1e",
  "colorTextBadgeCritical": "#d21c1c",
  "colorTextBadgeDark": "#fff",
  "colorTextBadgeInfo": "#0176D2",
  "colorTextBadgeNeutral": "#171b1e",
  "colorTextBadgeSuccess": "#46B655",
  "colorTextBadgeWarning": "#f9971e",
  "colorTextButtonCritical": "#fff",
  "colorTextButtonCriticalActive": "#fff",
  "colorTextButtonCriticalBordered": "#d21c1c",
  "colorTextButtonCriticalBorderedActive": "#b21717",
  "colorTextButtonCriticalBorderedHover": "#bd1919",
  "colorTextButtonCriticalHover": "#fff",
  "colorTextButtonFacebook": "#fff",
  "colorTextButtonFacebookActive": "#fff",
  "colorTextButtonFacebookBordered": "#3b5998",
  "colorTextButtonFacebookBorderedActive": "#354f88",
  "colorTextButtonFacebookBorderedHover": "#385490",
  "colorTextButtonFacebookHover": "#fff",
  "colorTextButtonFilled": "#fff",
  "colorTextButtonFilledActive": "#fff",
  "colorTextButtonFilledHover": "#fff",
  "colorTextButtonGoogle": "#46515e",
  "colorTextButtonGoogleActive": "#38404b",
  "colorTextButtonGoogleBordered": "#46515e",
  "colorTextButtonGoogleBorderedActive": "#38404b",
  "colorTextButtonGoogleBorderedHover": "#3f4854",
  "colorTextButtonGoogleHover": "#3f4854",
  "colorTextButtonInfo": "#fff",
  "colorTextButtonInfoActive": "#fff",
  "colorTextButtonInfoBordered": "#0176D2",
  "colorTextButtonInfoBorderedActive": "#0064b2",
  "colorTextButtonInfoBorderedHover": "#006abd",
  "colorTextButtonInfoHover": "#fff",
  "colorTextButtonLinkPrimary": "#ff0000",
  "colorTextButtonLinkPrimaryActive": "#cc0000",
  "colorTextButtonLinkPrimaryHover": "#e50000",
  "colorTextButtonLinkSecondary": "#46515e",
  "colorTextButtonLinkSecondaryActive": "#38404b",
  "colorTextButtonLinkSecondaryHover": "#3f4854",
  "colorTextButtonPrimary": "#fff",
  "colorTextButtonPrimaryActive": "#fff",
  "colorTextButtonPrimaryBordered": "#ff0000",
  "colorTextButtonPrimaryBorderedActive": "#cc0000",
  "colorTextButtonPrimaryBorderedHover": "#e50000",
  "colorTextButtonPrimaryHover": "#fff",
  "colorTextButtonSecondary": "#46515e",
  "colorTextButtonSecondaryActive": "#38404b",
  "colorTextButtonSecondaryBordered": "#46515e",
  "colorTextButtonSecondaryBorderedActive": "#38404b",
  "colorTextButtonSecondaryBorderedHover": "#3f4854",
  "colorTextButtonSecondaryHover": "#3f4854",
  "colorTextButtonSuccess": "#fff",
  "colorTextButtonSuccessActive": "#fff",
  "colorTextButtonSuccessBordered": "#46B655",
  "colorTextButtonSuccessBorderedActive": "#3fa34c",
  "colorTextButtonSuccessBorderedHover": "#42ac50",
  "colorTextButtonSuccessHover": "#fff",
  "colorTextButtonWarning": "#fff",
  "colorTextButtonWarningActive": "#fff",
  "colorTextButtonWarningBordered": "#f9971e",
  "colorTextButtonWarningBorderedActive": "#e68206",
  "colorTextButtonWarningBorderedHover": "#f48a06",
  "colorTextButtonWarningHover": "#fff",
  "colorTextCritical": "#d21c1c",
  "colorTextError": "#d21c1c",
  "colorTextInfo": "#0176D2",
  "colorTextInput": "#46515e",
  "colorTextInputDisabled": "#bac7d5",
  "colorTextInputPrefix": "#7f91a8",
  "colorTextLinkPrimary": "#ff0000",
  "colorTextLinkPrimaryHover": "#ff0000",
  "colorTextLinkSecondary": "#171b1e",
  "colorTextLinkSecondaryHover": "#ff0000",
  "colorTextPrimary": "#46515e",
  "colorTextSecondary": "#7f91a8",
  "colorTextSuccess": "#46B655",
  "colorTextWarning": "#f9971e",
  "colorTextWhite": "#fff",
  "durationFast": "0.15s",
  "durationNormal": "0.3s",
  "durationSlow": "0.4s",
  "fontFamily": "\\"Roboto\\", -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif",
  "fontSizeButtonLarge": "16px",
  "fontSizeButtonNormal": "14px",
  "fontSizeButtonSmall": "12px",
  "fontSizeFormFeedback": "12px",
  "fontSizeFormLabel": "14px",
  "fontSizeHeadingDisplay": "40px",
  "fontSizeHeadingTitle1": "28px",
  "fontSizeHeadingTitle2": "22px",
  "fontSizeHeadingTitle3": "16px",
  "fontSizeInputNormal": "14px",
  "fontSizeInputSmall": "14px",
  "fontSizeMessage": "14px",
  "fontSizeTextLarge": "16px",
  "fontSizeTextNormal": "14px",
  "fontSizeTextSmall": "12px",
  "fontWeightBold": "700",
  "fontWeightHeadingDisplay": "700",
  "fontWeightHeadingTitle1": "700",
  "fontWeightHeadingTitle2": "500",
  "fontWeightHeadingTitle3": "500",
  "fontWeightLinks": "500",
  "fontWeightMedium": "500",
  "fontWeightNormal": "400",
  "heightBadge": "24px",
  "heightButtonLarge": "52px",
  "heightButtonNormal": "44px",
  "heightButtonSmall": "32px",
  "heightCheckbox": "20px",
  "heightCountryFlag": "auto",
  "heightIconLarge": "32px",
  "heightIconMedium": "24px",
  "heightIconSmall": "16px",
  "heightIllustrationMedium": "200px",
  "heightIllustrationSmall": "90px",
  "heightInputGroupSeparatorNormal": "24px",
  "heightInputGroupSeparatorSmall": "16px",
  "heightInputLarge": "52px",
  "heightInputNormal": "44px",
  "heightInputSmall": "32px",
  "heightRadioButton": "20px",
  "heightSeparator": "1px",
  "heightServiceLogoLarge": "48px",
  "heightServiceLogoMedium": "24px",
  "heightServiceLogoSmall": "12px",
  "lineHeightHeading": "1.2",
  "lineHeightText": "1.4",
  "marginBottomSelectSuffix": "2px",
  "marginButtonIconLarge": "12px",
  "marginButtonIconNormal": "8px",
  "marginButtonIconSmall": "8px",
  "marginRightBadgeIcon": "4px",
  "marginRightButtonGroup": "1px",
  "marginTopFormFeedback": "2px",
  "modifierScaleButtonActive": 0.95,
  "modifierScaleCheckboxRadioActive": 0.95,
  "opacityButtonDisabled": "0.3",
  "opacityCheckboxDisabled": "0.5",
  "opacityOverlay": "0.8",
  "opacityRadioButtonDisabled": "0.5",
  "paddingAlert": "16px",
  "paddingAlertWithIcon": "12px",
  "paddingButtonLarge": "28px",
  "paddingButtonLargeWithIcon": "16px",
  "paddingButtonNormal": "16px",
  "paddingButtonNormalWithIcon": "12px",
  "paddingButtonSmall": "12px",
  "paddingButtonSmallWithIcon": "8px",
  "paddingInputNormal": "0 12px",
  "paddingInputSmall": "0 12px",
  "paddingLeftInputFile": "6px",
  "paddingLeftSelectPrefix": "48px",
  "paddingTextareaNormal": "12px",
  "paddingTextareaSmall": "8px 12px",
  "paletteBlueDark": "#003A69",
  "paletteBlueLight": "#e0f6ff",
  "paletteBlueLightActive": "#b0e8fe",
  "paletteBlueLightHover": "#c8effe",
  "paletteBlueNormal": "#0176D2",
  "paletteBlueNormalActive": "#0064b2",
  "paletteBlueNormalHover": "#006abd",
  "paletteCloudLight": "#f5f7f9",
  "paletteCloudLightActive": "#d6dee6",
  "paletteCloudLightHover": "#e5eaef",
  "paletteCloudNormal": "#e8edf1",
  "paletteCloudNormalActive": "#cad5df",
  "paletteCloudNormalHover": "#d9e1e8",
  "paletteGreenDark": "#065d12",
  "paletteGreenLight": "#e7f3e8",
  "paletteGreenLightActive": "#c7e3c9",
  "paletteGreenLightHover": "#d7ebd8",
  "paletteGreenNormal": "#46B655",
  "paletteGreenNormalActive": "#3fa34c",
  "paletteGreenNormalHover": "#42ac50",
  "paletteInkDark": "#171b1e",
  "paletteInkLight": "#7f91a8",
  "paletteInkLightActive": "#5f738c",
  "paletteInkLightHover": "#6d819c",
  "paletteInkLighter": "#bac7d5",
  "paletteInkLighterActive": "#94a8be",
  "paletteInkLighterHover": "#a6b6c8",
  "paletteInkNormal": "#46515e",
  "paletteInkNormalActive": "#38404b",
  "paletteInkNormalHover": "#3f4854",
  "paletteOrangeDark": "#a93610",
  "paletteOrangeLight": "#fcf1cd",
  "paletteOrangeLightActive": "#f9e4a1",
  "paletteOrangeLightHover": "#faeab7",
  "paletteOrangeNormal": "#f9971e",
  "paletteOrangeNormalActive": "#e68206",
  "paletteOrangeNormalHover": "#f48a06",
  "paletteProductDark": "#990000",
  "paletteProductLight": "#ff9999",
  "paletteProductLightActive": "#ff6666",
  "paletteProductLightHover": "#ff7f7f",
  "paletteProductNormal": "#ff0000",
  "paletteProductNormalActive": "#cc0000",
  "paletteProductNormalHover": "#e50000",
  "paletteRedDark": "#650808",
  "paletteRedLight": "#fae8e8",
  "paletteRedLightActive": "#f1c0c0",
  "paletteRedLightHover": "#f5d4d4",
  "paletteRedNormal": "#d21c1c",
  "paletteRedNormalActive": "#b21717",
  "paletteRedNormalHover": "#bd1919",
  "paletteSocialFacebook": "#3b5998",
  "paletteSocialFacebookActive": "#354f88",
  "paletteSocialFacebookHover": "#385490",
  "paletteWhite": "#fff",
  "paletteWhiteActive": "#e5eaef",
  "paletteWhiteHover": "#f5f7f9",
  "spaceLarge": "24px",
  "spaceMedium": "16px",
  "spaceSmall": "12px",
  "spaceXLarge": "32px",
  "spaceXSmall": "8px",
  "spaceXXLarge": "40px",
  "spaceXXSmall": "4px",
  "spaceXXXLarge": "52px",
  "spaceXXXSmall": "2px",
  "textDecorationTextLinkPrimary": "none",
  "textDecorationTextLinkPrimaryHover": "underline",
  "textDecorationTextLinkSecondary": "underline",
  "textDecorationTextLinkSecondaryHover": "underline",
  "widthBadgeCircled": "24px",
  "widthCheckbox": "20px",
  "widthCountryFlag": "24px",
  "widthIconLarge": "32px",
  "widthIconMedium": "24px",
  "widthIconSmall": "16px",
  "widthRadioButton": "20px",
  "zIndexDefault": "1",
  "zIndexModal": "825",
  "zIndexModalOverlay": "800",
  "zIndexOnTheTop": "900",
  "zIndexSticky": "100",
}
`;

exports[`getTokens should accept some base should match snapshot 1`] = `
Object {
  "backgroundAlertCritical": "#fae8e8",
  "backgroundAlertInfo": "#e0f6ff",
  "backgroundAlertSuccess": "#e7f3e8",
  "backgroundAlertWarning": "#fcf1cd",
  "backgroundBadgeCritical": "#fae8e8",
  "backgroundBadgeDark": "#46515e",
  "backgroundBadgeInfo": "#e0f6ff",
  "backgroundBadgeNeutral": "#f5f7f9",
  "backgroundBadgeSuccess": "#e7f3e8",
  "backgroundBadgeWarning": "#fcf1cd",
  "backgroundBody": "#f5f7f9",
  "backgroundButtonBordered": "transparent",
  "backgroundButtonBorderedActive": "#fff",
  "backgroundButtonBorderedHover": "#f5f7f9",
  "backgroundButtonCritical": "#d21c1c",
  "backgroundButtonCriticalActive": "#b21717",
  "backgroundButtonCriticalHover": "#bd1919",
  "backgroundButtonFacebook": "#3b5998",
  "backgroundButtonFacebookActive": "#354f88",
  "backgroundButtonFacebookHover": "#385490",
  "backgroundButtonGoogle": "#f5f7f9",
  "backgroundButtonGoogleActive": "#d6dee6",
  "backgroundButtonGoogleHover": "#e5eaef",
  "backgroundButtonInfo": "#0176D2",
  "backgroundButtonInfoActive": "#0064b2",
  "backgroundButtonInfoHover": "#006abd",
  "backgroundButtonLinkPrimary": "transparent",
  "backgroundButtonLinkPrimaryActive": "#d6dee6",
  "backgroundButtonLinkPrimaryHover": "#e5eaef",
  "backgroundButtonLinkSecondary": "transparent",
  "backgroundButtonLinkSecondaryActive": "#d6dee6",
  "backgroundButtonLinkSecondaryHover": "#e5eaef",
  "backgroundButtonPrimary": "#00a991",
  "backgroundButtonPrimaryActive": "#008f7b",
  "backgroundButtonPrimaryHover": "#009882",
  "backgroundButtonSecondary": "#e8edf1",
  "backgroundButtonSecondaryActive": "#cad5df",
  "backgroundButtonSecondaryHover": "#d9e1e8",
  "backgroundButtonSuccess": "#46B655",
  "backgroundButtonSuccessActive": "#3fa34c",
  "backgroundButtonSuccessHover": "#42ac50",
  "backgroundButtonWarning": "#f9971e",
  "backgroundButtonWarningActive": "#e68206",
  "backgroundButtonWarningHover": "#f48a06",
  "backgroundCard": "#fff",
  "backgroundCarrierLogo": "transparent",
  "backgroundCountryFlag": "transparent",
  "backgroundIllustration": "transparent",
  "backgroundInput": "#fff",
  "backgroundInputDisabled": "#e8edf1",
  "backgroundModal": "#fff",
  "backgroundSeparator": "#e8edf1",
  "backgroundServiceLogo": "transparent",
  "borderColorButtonCriticalBordered": "#d21c1c",
  "borderColorButtonCriticalBorderedActive": "#b21717",
  "borderColorButtonCriticalBorderedHover": "#bd1919",
  "borderColorButtonFacebookBordered": "#3b5998",
  "borderColorButtonFacebookBorderedActive": "#354f88",
  "borderColorButtonFacebookBorderedHover": "#385490",
  "borderColorButtonGoogleBordered": "#46515e",
  "borderColorButtonGoogleBorderedActive": "#38404b",
  "borderColorButtonGoogleBorderedHover": "#3f4854",
  "borderColorButtonInfoBordered": "#0176D2",
  "borderColorButtonInfoBorderedActive": "#0064b2",
  "borderColorButtonInfoBorderedHover": "#006abd",
  "borderColorButtonPrimaryBordered": "#00a991",
  "borderColorButtonPrimaryBorderedActive": "#008f7b",
  "borderColorButtonPrimaryBorderedHover": "#009882",
  "borderColorButtonSecondaryBordered": "#46515e",
  "borderColorButtonSecondaryBorderedActive": "#38404b",
  "borderColorButtonSecondaryBorderedHover": "#3f4854",
  "borderColorButtonSuccessBordered": "#46B655",
  "borderColorButtonSuccessBorderedActive": "#3fa34c",
  "borderColorButtonSuccessBorderedHover": "#42ac50",
  "borderColorButtonWarningBordered": "#f9971e",
  "borderColorButtonWarningBorderedActive": "#e68206",
  "borderColorButtonWarningBorderedHover": "#f48a06",
  "borderColorCard": "#e8edf1",
  "borderColorCheckboxRadio": "#bac7d5",
  "borderColorCheckboxRadioActive": "#46515e",
  "borderColorCheckboxRadioError": "#d21c1c",
  "borderColorCheckboxRadioFocus": "#0176D2",
  "borderColorCheckboxRadioHover": "#7f91a8",
  "borderColorInput": "#bac7d5",
  "borderColorInputActive": "#94a8be",
  "borderColorInputError": "#d21c1c",
  "borderColorInputErrorFocus": "#d21c1c",
  "borderColorInputErrorHover": "#bd1919",
  "borderColorInputFocus": "#0176D2",
  "borderColorInputHover": "#a6b6c8",
  "borderColorModal": "#e8edf1",
  "borderColorTableCell": "#bac7d5",
  "borderRadiusBadge": "12px",
  "borderRadiusCircle": "50%",
  "borderRadiusLarge": "6px",
  "borderRadiusNormal": "3px",
  "borderRadiusSmall": "2px",
  "borderStyleCard": "solid",
  "borderStyleInput": "solid",
  "borderWidthCard": "1px",
  "borderWidthInput": "1px",
  "borderWidthInputFocus": "2px",
  "boxShadowActionable": "0 2px 4px 0 rgba(23, 27, 30, 0.1)",
  "boxShadowButtonFocus": "0 0 4px 1px rgba(1, 118, 210, 0.3)",
  "boxShadowElevatedLevel1": "0 4px 12px 0 rgba(23, 27, 30, 0.15)",
  "boxShadowModal": "0 20px 60px 0 rgba(23, 27, 30, 0.4)",
  "colorAlertIconCritical": "#d21c1c",
  "colorAlertIconInfo": "#0176D2",
  "colorAlertIconSuccess": "#46B655",
  "colorAlertIconWarning": "#f9971e",
  "colorFormLabel": "#46515e",
  "colorFormLabelFilled": "#7f91a8",
  "colorHeading": "#171b1e",
  "colorHeadingInverted": "#fff",
  "colorIconAttention": "#171b1e",
  "colorIconCheckboxRadio": "#00a991",
  "colorIconCheckboxRadioDisabled": "#bac7d5",
  "colorIconCritical": "#d21c1c",
  "colorIconInfo": "#0176D2",
  "colorIconInput": "#bac7d5",
  "colorIconPrimary": "#46515e",
  "colorIconRadioButton": "#00a991",
  "colorIconRadioButtonDisabled": "#bac7d5",
  "colorIconSecondary": "#7f91a8",
  "colorIconSuccess": "#46B655",
  "colorIconTertiary": "#bac7d5",
  "colorIconWarning": "#f9971e",
  "colorInfoCheckBoxRadio": "#7f91a8",
  "colorPlaceholderInput": "#bac7d5",
  "colorPlaceholderInputError": "#d21c1c",
  "colorPlaceholderInputFile": "#7f91a8",
  "colorPlaceholderInputFileError": "#d21c1c",
  "colorTextAlertCritical": "#650808",
  "colorTextAlertInfo": "#003A69",
  "colorTextAlertLink": "#171b1e",
  "colorTextAlertSuccess": "#065d12",
  "colorTextAlertWarning": "#a93610",
  "colorTextAttention": "#171b1e",
  "colorTextBadgeCritical": "#d21c1c",
  "colorTextBadgeDark": "#fff",
  "colorTextBadgeInfo": "#0176D2",
  "colorTextBadgeNeutral": "#171b1e",
  "colorTextBadgeSuccess": "#46B655",
  "colorTextBadgeWarning": "#f9971e",
  "colorTextButtonCritical": "#fff",
  "colorTextButtonCriticalActive": "#fff",
  "colorTextButtonCriticalBordered": "#d21c1c",
  "colorTextButtonCriticalBorderedActive": "#b21717",
  "colorTextButtonCriticalBorderedHover": "#bd1919",
  "colorTextButtonCriticalHover": "#fff",
  "colorTextButtonFacebook": "#fff",
  "colorTextButtonFacebookActive": "#fff",
  "colorTextButtonFacebookBordered": "#3b5998",
  "colorTextButtonFacebookBorderedActive": "#354f88",
  "colorTextButtonFacebookBorderedHover": "#385490",
  "colorTextButtonFacebookHover": "#fff",
  "colorTextButtonFilled": "#fff",
  "colorTextButtonFilledActive": "#fff",
  "colorTextButtonFilledHover": "#fff",
  "colorTextButtonGoogle": "#46515e",
  "colorTextButtonGoogleActive": "#38404b",
  "colorTextButtonGoogleBordered": "#46515e",
  "colorTextButtonGoogleBorderedActive": "#38404b",
  "colorTextButtonGoogleBorderedHover": "#3f4854",
  "colorTextButtonGoogleHover": "#3f4854",
  "colorTextButtonInfo": "#fff",
  "colorTextButtonInfoActive": "#fff",
  "colorTextButtonInfoBordered": "#0176D2",
  "colorTextButtonInfoBorderedActive": "#0064b2",
  "colorTextButtonInfoBorderedHover": "#006abd",
  "colorTextButtonInfoHover": "#fff",
  "colorTextButtonLinkPrimary": "#00a991",
  "colorTextButtonLinkPrimaryActive": "#008f7b",
  "colorTextButtonLinkPrimaryHover": "#009882",
  "colorTextButtonLinkSecondary": "#46515e",
  "colorTextButtonLinkSecondaryActive": "#38404b",
  "colorTextButtonLinkSecondaryHover": "#3f4854",
  "colorTextButtonPrimary": "#fff",
  "colorTextButtonPrimaryActive": "#fff",
  "colorTextButtonPrimaryBordered": "#00a991",
  "colorTextButtonPrimaryBorderedActive": "#008f7b",
  "colorTextButtonPrimaryBorderedHover": "#009882",
  "colorTextButtonPrimaryHover": "#fff",
  "colorTextButtonSecondary": "#46515e",
  "colorTextButtonSecondaryActive": "#38404b",
  "colorTextButtonSecondaryBordered": "#46515e",
  "colorTextButtonSecondaryBorderedActive": "#38404b",
  "colorTextButtonSecondaryBorderedHover": "#3f4854",
  "colorTextButtonSecondaryHover": "#3f4854",
  "colorTextButtonSuccess": "#fff",
  "colorTextButtonSuccessActive": "#fff",
  "colorTextButtonSuccessBordered": "#46B655",
  "colorTextButtonSuccessBorderedActive": "#3fa34c",
  "colorTextButtonSuccessBorderedHover": "#42ac50",
  "colorTextButtonSuccessHover": "#fff",
  "colorTextButtonWarning": "#fff",
  "colorTextButtonWarningActive": "#fff",
  "colorTextButtonWarningBordered": "#f9971e",
  "colorTextButtonWarningBorderedActive": "#e68206",
  "colorTextButtonWarningBorderedHover": "#f48a06",
  "colorTextButtonWarningHover": "#fff",
  "colorTextCritical": "#d21c1c",
  "colorTextError": "#d21c1c",
  "colorTextInfo": "#0176D2",
  "colorTextInput": "#46515e",
  "colorTextInputDisabled": "#bac7d5",
  "colorTextInputPrefix": "#7f91a8",
  "colorTextLinkPrimary": "#00a991",
  "colorTextLinkPrimaryHover": "#00a991",
  "colorTextLinkSecondary": "#171b1e",
  "colorTextLinkSecondaryHover": "#00a991",
  "colorTextPrimary": "#46515e",
  "colorTextSecondary": "#7f91a8",
  "colorTextSuccess": "#46B655",
  "colorTextWarning": "#f9971e",
  "colorTextWhite": "#fff",
  "durationFast": "0.15s",
  "durationNormal": "0.3s",
  "durationSlow": "0.4s",
  "fontFamily": "\\"Roboto\\", -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif",
  "fontSizeButtonLarge": "16px",
  "fontSizeButtonNormal": "14px",
  "fontSizeButtonSmall": "12px",
  "fontSizeFormFeedback": "12px",
  "fontSizeFormLabel": "14px",
  "fontSizeHeadingDisplay": "40px",
  "fontSizeHeadingTitle1": "28px",
  "fontSizeHeadingTitle2": "22px",
  "fontSizeHeadingTitle3": "16px",
  "fontSizeInputNormal": "14px",
  "fontSizeInputSmall": "14px",
  "fontSizeMessage": "14px",
  "fontSizeTextLarge": "16px",
  "fontSizeTextNormal": "14px",
  "fontSizeTextSmall": "12px",
  "fontWeightBold": "700",
  "fontWeightHeadingDisplay": "700",
  "fontWeightHeadingTitle1": "700",
  "fontWeightHeadingTitle2": "500",
  "fontWeightHeadingTitle3": "500",
  "fontWeightLinks": "500",
  "fontWeightMedium": "500",
  "fontWeightNormal": "400",
  "heightBadge": "2px",
  "heightButtonLarge": "5px",
  "heightButtonNormal": "4px",
  "heightButtonSmall": "3px",
  "heightCheckbox": "20px",
  "heightCountryFlag": "auto",
  "heightIconLarge": "3px",
  "heightIconMedium": "2px",
  "heightIconSmall": "1px",
  "heightIllustrationMedium": "200px",
  "heightIllustrationSmall": "90px",
  "heightInputGroupSeparatorNormal": "2px",
  "heightInputGroupSeparatorSmall": "1px",
  "heightInputLarge": "5px",
  "heightInputNormal": "4px",
  "heightInputSmall": "3px",
  "heightRadioButton": "20px",
  "heightSeparator": "1px",
  "heightServiceLogoLarge": "48px",
  "heightServiceLogoMedium": "2px",
  "heightServiceLogoSmall": "12px",
  "lineHeightHeading": "1.2",
  "lineHeightText": "1.4",
  "marginBottomSelectSuffix": "2px",
  "marginButtonIconLarge": "12px",
  "marginButtonIconNormal": "8px",
  "marginButtonIconSmall": "8px",
  "marginRightBadgeIcon": "4px",
  "marginRightButtonGroup": "1px",
  "marginTopFormFeedback": "2px",
  "modifierScaleButtonActive": 0.95,
  "modifierScaleCheckboxRadioActive": 0.95,
  "opacityButtonDisabled": "0.3",
  "opacityCheckboxDisabled": "0.5",
  "opacityOverlay": "0.8",
  "opacityRadioButtonDisabled": "0.5",
  "paddingAlert": "16px",
  "paddingAlertWithIcon": "12px",
  "paddingButtonLarge": "28px",
  "paddingButtonLargeWithIcon": "16px",
  "paddingButtonNormal": "16px",
  "paddingButtonNormalWithIcon": "12px",
  "paddingButtonSmall": "12px",
  "paddingButtonSmallWithIcon": "8px",
  "paddingInputNormal": "0 12px",
  "paddingInputSmall": "0 12px",
  "paddingLeftInputFile": "6px",
  "paddingLeftSelectPrefix": "48px",
  "paddingTextareaNormal": "12px",
  "paddingTextareaSmall": "8px 12px",
  "paletteBlueDark": "#003A69",
  "paletteBlueLight": "#e0f6ff",
  "paletteBlueLightActive": "#b0e8fe",
  "paletteBlueLightHover": "#c8effe",
  "paletteBlueNormal": "#0176D2",
  "paletteBlueNormalActive": "#0064b2",
  "paletteBlueNormalHover": "#006abd",
  "paletteCloudLight": "#f5f7f9",
  "paletteCloudLightActive": "#d6dee6",
  "paletteCloudLightHover": "#e5eaef",
  "paletteCloudNormal": "#e8edf1",
  "paletteCloudNormalActive": "#cad5df",
  "paletteCloudNormalHover": "#d9e1e8",
  "paletteGreenDark": "#065d12",
  "paletteGreenLight": "#e7f3e8",
  "paletteGreenLightActive": "#c7e3c9",
  "paletteGreenLightHover": "#d7ebd8",
  "paletteGreenNormal": "#46B655",
  "paletteGreenNormalActive": "#3fa34c",
  "paletteGreenNormalHover": "#42ac50",
  "paletteInkDark": "#171b1e",
  "paletteInkLight": "#7f91a8",
  "paletteInkLightActive": "#5f738c",
  "paletteInkLightHover": "#6d819c",
  "paletteInkLighter": "#bac7d5",
  "paletteInkLighterActive": "#94a8be",
  "paletteInkLighterHover": "#a6b6c8",
  "paletteInkNormal": "#46515e",
  "paletteInkNormalActive": "#38404b",
  "paletteInkNormalHover": "#3f4854",
  "paletteOrangeDark": "#a93610",
  "paletteOrangeLight": "#fcf1cd",
  "paletteOrangeLightActive": "#f9e4a1",
  "paletteOrangeLightHover": "#faeab7",
  "paletteOrangeNormal": "#f9971e",
  "paletteOrangeNormalActive": "#e68206",
  "paletteOrangeNormalHover": "#f48a06",
  "paletteProductDark": "#00826f",
  "paletteProductLight": "#E1F5F2",
  "paletteProductLightActive": "#9addd3",
  "paletteProductLightHover": "#bde9e2",
  "paletteProductNormal": "#00a991",
  "paletteProductNormalActive": "#008f7b",
  "paletteProductNormalHover": "#009882",
  "paletteRedDark": "#650808",
  "paletteRedLight": "#fae8e8",
  "paletteRedLightActive": "#f1c0c0",
  "paletteRedLightHover": "#f5d4d4",
  "paletteRedNormal": "#d21c1c",
  "paletteRedNormalActive": "#b21717",
  "paletteRedNormalHover": "#bd1919",
  "paletteSocialFacebook": "#3b5998",
  "paletteSocialFacebookActive": "#354f88",
  "paletteSocialFacebookHover": "#385490",
  "paletteWhite": "#fff",
  "paletteWhiteActive": "#e5eaef",
  "paletteWhiteHover": "#f5f7f9",
  "spaceLarge": "24px",
  "spaceMedium": "16px",
  "spaceSmall": "12px",
  "spaceXLarge": "32px",
  "spaceXSmall": "8px",
  "spaceXXLarge": "40px",
  "spaceXXSmall": "4px",
  "spaceXXXLarge": "52px",
  "spaceXXXSmall": "2px",
  "textDecorationTextLinkPrimary": "none",
  "textDecorationTextLinkPrimaryHover": "underline",
  "textDecorationTextLinkSecondary": "underline",
  "textDecorationTextLinkSecondaryHover": "underline",
  "widthBadgeCircled": "2px",
  "widthCheckbox": "20px",
  "widthCountryFlag": "2px",
  "widthIconLarge": "3px",
  "widthIconMedium": "2px",
  "widthIconSmall": "1px",
  "widthRadioButton": "20px",
  "zIndexDefault": "1",
  "zIndexModal": "825",
  "zIndexModalOverlay": "800",
  "zIndexOnTheTop": "900",
  "zIndexSticky": "100",
}
`;

exports[`getTokens should accept some palette and base foundation should match snapshot 1`] = `
Object {
  "backgroundAlertCritical": "#fae8e8",
  "backgroundAlertInfo": "#e0f6ff",
  "backgroundAlertSuccess": "#e7f3e8",
  "backgroundAlertWarning": "#fcf1cd",
  "backgroundBadgeCritical": "#fae8e8",
  "backgroundBadgeDark": "#46515e",
  "backgroundBadgeInfo": "#e0f6ff",
  "backgroundBadgeNeutral": "#f5f7f9",
  "backgroundBadgeSuccess": "#e7f3e8",
  "backgroundBadgeWarning": "#fcf1cd",
  "backgroundBody": "#f5f7f9",
  "backgroundButtonBordered": "transparent",
  "backgroundButtonBorderedActive": "#fff",
  "backgroundButtonBorderedHover": "#f5f7f9",
  "backgroundButtonCritical": "#d21c1c",
  "backgroundButtonCriticalActive": "#b21717",
  "backgroundButtonCriticalHover": "#bd1919",
  "backgroundButtonFacebook": "#3b5998",
  "backgroundButtonFacebookActive": "#354f88",
  "backgroundButtonFacebookHover": "#385490",
  "backgroundButtonGoogle": "#f5f7f9",
  "backgroundButtonGoogleActive": "#d6dee6",
  "backgroundButtonGoogleHover": "#e5eaef",
  "backgroundButtonInfo": "#0176D2",
  "backgroundButtonInfoActive": "#0064b2",
  "backgroundButtonInfoHover": "#006abd",
  "backgroundButtonLinkPrimary": "transparent",
  "backgroundButtonLinkPrimaryActive": "#d6dee6",
  "backgroundButtonLinkPrimaryHover": "#e5eaef",
  "backgroundButtonLinkSecondary": "transparent",
  "backgroundButtonLinkSecondaryActive": "#d6dee6",
  "backgroundButtonLinkSecondaryHover": "#e5eaef",
  "backgroundButtonPrimary": "#444",
  "backgroundButtonPrimaryActive": "#666",
  "backgroundButtonPrimaryHover": "#555",
  "backgroundButtonSecondary": "#e8edf1",
  "backgroundButtonSecondaryActive": "#cad5df",
  "backgroundButtonSecondaryHover": "#d9e1e8",
  "backgroundButtonSuccess": "#46B655",
  "backgroundButtonSuccessActive": "#3fa34c",
  "backgroundButtonSuccessHover": "#42ac50",
  "backgroundButtonWarning": "#f9971e",
  "backgroundButtonWarningActive": "#e68206",
  "backgroundButtonWarningHover": "#f48a06",
  "backgroundCard": "#fff",
  "backgroundCarrierLogo": "transparent",
  "backgroundCountryFlag": "transparent",
  "backgroundIllustration": "transparent",
  "backgroundInput": "#fff",
  "backgroundInputDisabled": "#e8edf1",
  "backgroundModal": "#fff",
  "backgroundSeparator": "#e8edf1",
  "backgroundServiceLogo": "transparent",
  "borderColorButtonCriticalBordered": "#d21c1c",
  "borderColorButtonCriticalBorderedActive": "#b21717",
  "borderColorButtonCriticalBorderedHover": "#bd1919",
  "borderColorButtonFacebookBordered": "#3b5998",
  "borderColorButtonFacebookBorderedActive": "#354f88",
  "borderColorButtonFacebookBorderedHover": "#385490",
  "borderColorButtonGoogleBordered": "#46515e",
  "borderColorButtonGoogleBorderedActive": "#38404b",
  "borderColorButtonGoogleBorderedHover": "#3f4854",
  "borderColorButtonInfoBordered": "#0176D2",
  "borderColorButtonInfoBorderedActive": "#0064b2",
  "borderColorButtonInfoBorderedHover": "#006abd",
  "borderColorButtonPrimaryBordered": "#444",
  "borderColorButtonPrimaryBorderedActive": "#666",
  "borderColorButtonPrimaryBorderedHover": "#555",
  "borderColorButtonSecondaryBordered": "#46515e",
  "borderColorButtonSecondaryBorderedActive": "#38404b",
  "borderColorButtonSecondaryBorderedHover": "#3f4854",
  "borderColorButtonSuccessBordered": "#46B655",
  "borderColorButtonSuccessBorderedActive": "#3fa34c",
  "borderColorButtonSuccessBorderedHover": "#42ac50",
  "borderColorButtonWarningBordered": "#f9971e",
  "borderColorButtonWarningBorderedActive": "#e68206",
  "borderColorButtonWarningBorderedHover": "#f48a06",
  "borderColorCard": "#e8edf1",
  "borderColorCheckboxRadio": "#bac7d5",
  "borderColorCheckboxRadioActive": "#46515e",
  "borderColorCheckboxRadioError": "#d21c1c",
  "borderColorCheckboxRadioFocus": "#0176D2",
  "borderColorCheckboxRadioHover": "#7f91a8",
  "borderColorInput": "#bac7d5",
  "borderColorInputActive": "#94a8be",
  "borderColorInputError": "#d21c1c",
  "borderColorInputErrorFocus": "#d21c1c",
  "borderColorInputErrorHover": "#bd1919",
  "borderColorInputFocus": "#0176D2",
  "borderColorInputHover": "#a6b6c8",
  "borderColorModal": "#e8edf1",
  "borderColorTableCell": "#bac7d5",
  "borderRadiusBadge": "12px",
  "borderRadiusCircle": "50%",
  "borderRadiusLarge": "6px",
  "borderRadiusNormal": "3px",
  "borderRadiusSmall": "2px",
  "borderStyleCard": "solid",
  "borderStyleInput": "solid",
  "borderWidthCard": "1px",
  "borderWidthInput": "1px",
  "borderWidthInputFocus": "2px",
  "boxShadowActionable": "0 2px 4px 0 rgba(23, 27, 30, 0.1)",
  "boxShadowButtonFocus": "0 0 4px 1px rgba(1, 118, 210, 0.3)",
  "boxShadowElevatedLevel1": "0 4px 12px 0 rgba(23, 27, 30, 0.15)",
  "boxShadowModal": "0 20px 60px 0 rgba(23, 27, 30, 0.4)",
  "colorAlertIconCritical": "#d21c1c",
  "colorAlertIconInfo": "#0176D2",
  "colorAlertIconSuccess": "#46B655",
  "colorAlertIconWarning": "#f9971e",
  "colorFormLabel": "#46515e",
  "colorFormLabelFilled": "#7f91a8",
  "colorHeading": "#171b1e",
  "colorHeadingInverted": "#fff",
  "colorIconAttention": "#171b1e",
  "colorIconCheckboxRadio": "#444",
  "colorIconCheckboxRadioDisabled": "#bac7d5",
  "colorIconCritical": "#d21c1c",
  "colorIconInfo": "#0176D2",
  "colorIconInput": "#bac7d5",
  "colorIconPrimary": "#46515e",
  "colorIconRadioButton": "#444",
  "colorIconRadioButtonDisabled": "#bac7d5",
  "colorIconSecondary": "#7f91a8",
  "colorIconSuccess": "#46B655",
  "colorIconTertiary": "#bac7d5",
  "colorIconWarning": "#f9971e",
  "colorInfoCheckBoxRadio": "#7f91a8",
  "colorPlaceholderInput": "#bac7d5",
  "colorPlaceholderInputError": "#d21c1c",
  "colorPlaceholderInputFile": "#7f91a8",
  "colorPlaceholderInputFileError": "#d21c1c",
  "colorTextAlertCritical": "#650808",
  "colorTextAlertInfo": "#003A69",
  "colorTextAlertLink": "#171b1e",
  "colorTextAlertSuccess": "#065d12",
  "colorTextAlertWarning": "#a93610",
  "colorTextAttention": "#171b1e",
  "colorTextBadgeCritical": "#d21c1c",
  "colorTextBadgeDark": "#fff",
  "colorTextBadgeInfo": "#0176D2",
  "colorTextBadgeNeutral": "#171b1e",
  "colorTextBadgeSuccess": "#46B655",
  "colorTextBadgeWarning": "#f9971e",
  "colorTextButtonCritical": "#fff",
  "colorTextButtonCriticalActive": "#fff",
  "colorTextButtonCriticalBordered": "#d21c1c",
  "colorTextButtonCriticalBorderedActive": "#b21717",
  "colorTextButtonCriticalBorderedHover": "#bd1919",
  "colorTextButtonCriticalHover": "#fff",
  "colorTextButtonFacebook": "#fff",
  "colorTextButtonFacebookActive": "#fff",
  "colorTextButtonFacebookBordered": "#3b5998",
  "colorTextButtonFacebookBorderedActive": "#354f88",
  "colorTextButtonFacebookBorderedHover": "#385490",
  "colorTextButtonFacebookHover": "#fff",
  "colorTextButtonFilled": "#fff",
  "colorTextButtonFilledActive": "#fff",
  "colorTextButtonFilledHover": "#fff",
  "colorTextButtonGoogle": "#46515e",
  "colorTextButtonGoogleActive": "#38404b",
  "colorTextButtonGoogleBordered": "#46515e",
  "colorTextButtonGoogleBorderedActive": "#38404b",
  "colorTextButtonGoogleBorderedHover": "#3f4854",
  "colorTextButtonGoogleHover": "#3f4854",
  "colorTextButtonInfo": "#fff",
  "colorTextButtonInfoActive": "#fff",
  "colorTextButtonInfoBordered": "#0176D2",
  "colorTextButtonInfoBorderedActive": "#0064b2",
  "colorTextButtonInfoBorderedHover": "#006abd",
  "colorTextButtonInfoHover": "#fff",
  "colorTextButtonLinkPrimary": "#444",
  "colorTextButtonLinkPrimaryActive": "#666",
  "colorTextButtonLinkPrimaryHover": "#555",
  "colorTextButtonLinkSecondary": "#46515e",
  "colorTextButtonLinkSecondaryActive": "#38404b",
  "colorTextButtonLinkSecondaryHover": "#3f4854",
  "colorTextButtonPrimary": "#fff",
  "colorTextButtonPrimaryActive": "#fff",
  "colorTextButtonPrimaryBordered": "#444",
  "colorTextButtonPrimaryBorderedActive": "#666",
  "colorTextButtonPrimaryBorderedHover": "#555",
  "colorTextButtonPrimaryHover": "#fff",
  "colorTextButtonSecondary": "#46515e",
  "colorTextButtonSecondaryActive": "#38404b",
  "colorTextButtonSecondaryBordered": "#46515e",
  "colorTextButtonSecondaryBorderedActive": "#38404b",
  "colorTextButtonSecondaryBorderedHover": "#3f4854",
  "colorTextButtonSecondaryHover": "#3f4854",
  "colorTextButtonSuccess": "#fff",
  "colorTextButtonSuccessActive": "#fff",
  "colorTextButtonSuccessBordered": "#46B655",
  "colorTextButtonSuccessBorderedActive": "#3fa34c",
  "colorTextButtonSuccessBorderedHover": "#42ac50",
  "colorTextButtonSuccessHover": "#fff",
  "colorTextButtonWarning": "#fff",
  "colorTextButtonWarningActive": "#fff",
  "colorTextButtonWarningBordered": "#f9971e",
  "colorTextButtonWarningBorderedActive": "#e68206",
  "colorTextButtonWarningBorderedHover": "#f48a06",
  "colorTextButtonWarningHover": "#fff",
  "colorTextCritical": "#d21c1c",
  "colorTextError": "#d21c1c",
  "colorTextInfo": "#0176D2",
  "colorTextInput": "#46515e",
  "colorTextInputDisabled": "#bac7d5",
  "colorTextInputPrefix": "#7f91a8",
  "colorTextLinkPrimary": "#444",
  "colorTextLinkPrimaryHover": "#444",
  "colorTextLinkSecondary": "#171b1e",
  "colorTextLinkSecondaryHover": "#444",
  "colorTextPrimary": "#46515e",
  "colorTextSecondary": "#7f91a8",
  "colorTextSuccess": "#46B655",
  "colorTextWarning": "#f9971e",
  "colorTextWhite": "#fff",
  "durationFast": "0.15s",
  "durationNormal": "0.3s",
  "durationSlow": "0.4s",
  "fontFamily": "\\"Roboto\\", -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif",
  "fontSizeButtonLarge": "16px",
  "fontSizeButtonNormal": "14px",
  "fontSizeButtonSmall": "16px",
  "fontSizeFormFeedback": "16px",
  "fontSizeFormLabel": "14px",
  "fontSizeHeadingDisplay": "40px",
  "fontSizeHeadingTitle1": "28px",
  "fontSizeHeadingTitle2": "22px",
  "fontSizeHeadingTitle3": "16px",
  "fontSizeInputNormal": "14px",
  "fontSizeInputSmall": "14px",
  "fontSizeMessage": "14px",
  "fontSizeTextLarge": "16px",
  "fontSizeTextNormal": "14px",
  "fontSizeTextSmall": "16px",
  "fontWeightBold": "700",
  "fontWeightHeadingDisplay": "700",
  "fontWeightHeadingTitle1": "700",
  "fontWeightHeadingTitle2": "500",
  "fontWeightHeadingTitle3": "500",
  "fontWeightLinks": "500",
  "fontWeightMedium": "500",
  "fontWeightNormal": "400",
  "heightBadge": "24px",
  "heightButtonLarge": "52px",
  "heightButtonNormal": "44px",
  "heightButtonSmall": "32px",
  "heightCheckbox": "20px",
  "heightCountryFlag": "auto",
  "heightIconLarge": "32px",
  "heightIconMedium": "24px",
  "heightIconSmall": "16px",
  "heightIllustrationMedium": "200px",
  "heightIllustrationSmall": "90px",
  "heightInputGroupSeparatorNormal": "24px",
  "heightInputGroupSeparatorSmall": "16px",
  "heightInputLarge": "52px",
  "heightInputNormal": "44px",
  "heightInputSmall": "32px",
  "heightRadioButton": "20px",
  "heightSeparator": "1px",
  "heightServiceLogoLarge": "48px",
  "heightServiceLogoMedium": "24px",
  "heightServiceLogoSmall": "12px",
  "lineHeightHeading": "1.2",
  "lineHeightText": "1.4",
  "marginBottomSelectSuffix": "2px",
  "marginButtonIconLarge": "12px",
  "marginButtonIconNormal": "8px",
  "marginButtonIconSmall": "8px",
  "marginRightBadgeIcon": "4px",
  "marginRightButtonGroup": "1px",
  "marginTopFormFeedback": "2px",
  "modifierScaleButtonActive": 0.95,
  "modifierScaleCheckboxRadioActive": 0.95,
  "opacityButtonDisabled": "0.3",
  "opacityCheckboxDisabled": "0.5",
  "opacityOverlay": "0.8",
  "opacityRadioButtonDisabled": "0.5",
  "paddingAlert": "16px",
  "paddingAlertWithIcon": "12px",
  "paddingButtonLarge": "28px",
  "paddingButtonLargeWithIcon": "16px",
  "paddingButtonNormal": "16px",
  "paddingButtonNormalWithIcon": "12px",
  "paddingButtonSmall": "12px",
  "paddingButtonSmallWithIcon": "8px",
  "paddingInputNormal": "0 12px",
  "paddingInputSmall": "0 12px",
  "paddingLeftInputFile": "6px",
  "paddingLeftSelectPrefix": "48px",
  "paddingTextareaNormal": "12px",
  "paddingTextareaSmall": "8px 12px",
  "paletteBlueDark": "#003A69",
  "paletteBlueLight": "#e0f6ff",
  "paletteBlueLightActive": "#b0e8fe",
  "paletteBlueLightHover": "#c8effe",
  "paletteBlueNormal": "#0176D2",
  "paletteBlueNormalActive": "#0064b2",
  "paletteBlueNormalHover": "#006abd",
  "paletteCloudLight": "#f5f7f9",
  "paletteCloudLightActive": "#d6dee6",
  "paletteCloudLightHover": "#e5eaef",
  "paletteCloudNormal": "#e8edf1",
  "paletteCloudNormalActive": "#cad5df",
  "paletteCloudNormalHover": "#d9e1e8",
  "paletteGreenDark": "#065d12",
  "paletteGreenLight": "#e7f3e8",
  "paletteGreenLightActive": "#c7e3c9",
  "paletteGreenLightHover": "#d7ebd8",
  "paletteGreenNormal": "#46B655",
  "paletteGreenNormalActive": "#3fa34c",
  "paletteGreenNormalHover": "#42ac50",
  "paletteInkDark": "#171b1e",
  "paletteInkLight": "#7f91a8",
  "paletteInkLightActive": "#5f738c",
  "paletteInkLightHover": "#6d819c",
  "paletteInkLighter": "#bac7d5",
  "paletteInkLighterActive": "#94a8be",
  "paletteInkLighterHover": "#a6b6c8",
  "paletteInkNormal": "#46515e",
  "paletteInkNormalActive": "#38404b",
  "paletteInkNormalHover": "#3f4854",
  "paletteOrangeDark": "#a93610",
  "paletteOrangeLight": "#fcf1cd",
  "paletteOrangeLightActive": "#f9e4a1",
  "paletteOrangeLightHover": "#faeab7",
  "paletteOrangeNormal": "#f9971e",
  "paletteOrangeNormalActive": "#e68206",
  "paletteOrangeNormalHover": "#f48a06",
  "paletteProductDark": "#777",
  "paletteProductLight": "#E1F5F2",
  "paletteProductLightActive": "#333",
  "paletteProductLightHover": "#222",
  "paletteProductNormal": "#444",
  "paletteProductNormalActive": "#666",
  "paletteProductNormalHover": "#555",
  "paletteRedDark": "#650808",
  "paletteRedLight": "#fae8e8",
  "paletteRedLightActive": "#f1c0c0",
  "paletteRedLightHover": "#f5d4d4",
  "paletteRedNormal": "#d21c1c",
  "paletteRedNormalActive": "#b21717",
  "paletteRedNormalHover": "#bd1919",
  "paletteSocialFacebook": "#3b5998",
  "paletteSocialFacebookActive": "#354f88",
  "paletteSocialFacebookHover": "#385490",
  "paletteWhite": "#fff",
  "paletteWhiteActive": "#e5eaef",
  "paletteWhiteHover": "#f5f7f9",
  "spaceLarge": "24px",
  "spaceMedium": "16px",
  "spaceSmall": "12px",
  "spaceXLarge": "32px",
  "spaceXSmall": "8px",
  "spaceXXLarge": "40px",
  "spaceXXSmall": "4px",
  "spaceXXXLarge": "52px",
  "spaceXXXSmall": "2px",
  "textDecorationTextLinkPrimary": "none",
  "textDecorationTextLinkPrimaryHover": "underline",
  "textDecorationTextLinkSecondary": "underline",
  "textDecorationTextLinkSecondaryHover": "underline",
  "widthBadgeCircled": "24px",
  "widthCheckbox": "20px",
  "widthCountryFlag": "24px",
  "widthIconLarge": "32px",
  "widthIconMedium": "24px",
  "widthIconSmall": "16px",
  "widthRadioButton": "20px",
  "zIndexDefault": "1",
  "zIndexModal": "825",
  "zIndexModalOverlay": "800",
  "zIndexOnTheTop": "900",
  "zIndexSticky": "100",
}
`;
